
CMAKE_MINIMUM_REQUIRED( VERSION 2.6)

PROJECT(libmooka)

MESSAGE("===== libmooka begin =====")

# 使用相对路径
SET(CMAKE_USE_RELATIVE_PATHS ON)

FILE(GLOB_RECURSE C_FILE_LIST *.c)
FILE(GLOB_RECURSE CPP_FILE_LIST *.cpp)
FILE(GLOB_RECURSE CC_FILE_LIST *.cc)
SET(ALL_FILE_LIST ${C_FILE_LIST} ${CPP_FILE_LIST} ${CC_FILE_LIST})

INCLUDE_DIRECTORIES(../libmooka)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -O2 -Wall")

ADD_LIBRARY(mooka STATIC ${ALL_FILE_LIST})

MESSAGE("===== libmooka end =====")
